# bbmp-util

./: CMakeLists.txt  README.md
CMake/: FindPathBetter.cmake
NvGpuTempReader/: CMakeLists.txt
NvGpuTempReader/Sources/: NvGpuTempReader.cpp
NvGpuTempReader/Test/: ReadNvidiaGpuTemp.cpp
nvapi/: .gitignore  CMakeLists.txt
nvidia_gpu_temp_reader/: CMakeLists.txt
nvidia_gpu_temp_reader/src/: bbmp_NvGpuTempReader.cpp  bbmp_NvGpuTempReader.h
nvidia_gpu_temp_reader/test/: ReadNvidiaGpuTemperature.cpp
windows/: CMakeLists.txt
windows/src/: bbmp_ChildProcess.cpp  bbmp_ChildProcess.h  bbmp_WindowsHandles.h
windows/test/: ChildProcessTest.cpp  TestChildProcess.cpp
